# Computer-Vision

./: README.md  cvdir  cvmake
Aula1/: CMakeLists.txt
Aula1/DisplayImage/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
Aula1/source/: CMakeLists.txt  DisplayImage.cpp
Aula1/src/: CMakeLists.txt
Aula10/src/: CMakeLists.txt  FaceDetect.cpp  FaceRecog.cpp  TempMatch.cpp
Aula11/: LECTURE11.doc
Aula11/src/: CMakeLists.txt  FeatDetect.cpp  Hough.cpp
Aula2/: CMakeCache.txt  CMakeLists.txt  Lecture02.odt  Makefile  cmake_install.cmake
Aula2/src/: AddImages.cpp  CMakeCache.txt  CMakeLists.txt  ChangeBrigtCront.cpp  Color2Gray.cpp  Makefile  cmake_install.cmake
Aula3/: LECTURE03.doc  Lecture03.doc
Aula3/src/: CMakeLists.txt  DetectSkin.cpp  GetHist.cpp  HistogramComp.cpp  ImageFilter.cpp  VideoCapture.cpp
Aula4/: CMakeLists.txt  LECTURE04.doc
Aula4/src/: CMakeLists.txt  Canny.cpp  Contours.cpp  CornerDetect.cpp  GradCalc.cpp  HoughCircle.cpp  HoughLine.cpp
Aula5/: CMakeLists.txt  LECTURE05.doc  camParams.xml
Aula5/src/: .fuse_hidden0000020600000002  CMakeLists.txt  CameraCalib.cpp
Aula6/: camParams.xml  camParams1.xml  camParams2.xml
Aula6/src/: CMakeLists.txt  Rectify.cpp  StereoCalib.cpp  Undistort.cpp  chessboard.cpp
Aula7/: CMakeLists.txt
Aula7/src/: CMakeLists.txt  ICPAlign.cpp  ViewCloud.cpp  WriteToPCD.cpp  reconstruct.cpp  viewCloud.cpp
Aula7e8/: CMakeLists.txt  LECTURE07&08.doc  camParams2.xml
Aula7e8/img/: filt_kinect1.pcd  filt_kinect2.pcd
Aula7e8/src/: CMakeLists.txt  ICPAlign.cpp  Reconstruct.cpp  ViewCloud.cpp  ViewOpenNI.cpp
Aula9/: LECTURE09.doc
Aula9/src/: BackgForegSep.cpp  CMakeLists.txt  ObjTracking.cpp  OpticalFlow.cpp  test.cpp  trackexample.cpp
Aula9/vid/: Bike.avi
PCL/: CMakeLists.txt
PCL/src/: CMakeLists.txt
Project/: Final-Report-Muscle-Movement-Quantification.doc
Project/src/: BackgForegSep.cpp  CMakeLists.txt  Histogram.cpp  MuscleSpeedQuant.cpp  Project.cpp  vidhelp.cpp
Project/vid/: TNM_NM_Longi_repouso_exten.wmv  TNM_NM_NM_Repouso_Mao_aberta_fechada_1.wmv
Tese/: CMakeLists.txt  Final-Report-Muscle-Movement-Quantification.docx
Tese/src/: CMakeLists.txt  Histogramv1.cpp  Mouse.cpp  Poly.cpp  Project.cpp  Thesis.cpp
Thesis/: CMakeLists.txt
Thesis/Teste de Python/: a.out  cpptest.py  morphsnakes.py  pythonRun.cpp
Thesis/asmlib-opencv-master/src/release/: CMakeCache.txt  Doxyfile  Makefile  cmake_install.cmake
Thesis/asmlib-opencv-master/src/release/annotation/: Makefile  annotator  cmake_install.cmake  moc_mainwindow.cxx  moc_mainwindow.cxx_parameters  moc_photoview.cxx  moc_photoview.cxx_parameters  moc_pointspaint.cxx  moc_pointspaint.cxx_parameters  moc_singlephotoview.cxx  moc_singlephotoview.cxx_parameters  ui_mainwindow.h
Thesis/asmlib-opencv-master/src/release/demo/: Makefile  cmake_install.cmake
Thesis/asmlib-opencv-master/src/release/lib/: Makefile  cmake_install.cmake
Thesis/src/: 1.cpp  CMakeLists.txt  Contour.cpp  Ellipse.cpp  Hull.cpp  PointInPolygon_ferrão.cpp  Poly.cpp  TestMain.cpp  Teste.cpp  Thesis.cpp  interpreter.cpp  morphsnakes.py  newPython.py  snake.cpp
Thesis/vid/: DICOMDIR  LONGITUDINAL_TERCO_MEDIO.wmv  REPOUSO_FLEXAO.wmv
Thesis/vid/ECO_Video_Conde/: A_m2_0parflexao_1_axial.wmv  A_m2_0parflexao_1_sagital.wmv  C_m2_0paraexten_1_sagital.wmv  C_m2_0parflexao_1_AXIAL_CARPO.wmv  C_m2_0parflexao_1_sagital.wmv  F_m2_0parextCarpo_Axial.wmv  Fflaxao45_1.wmv  G_m_0paraexten_axial.wmv  G_m_0parflexao_AXIAL.wmv  G_m_0parflexao_sagital.wmv  b_m2_0parflexao_1_sagital.wmv  m4.wmv
Thesis/vid/Finais/: DEDOS_AXIAL_EXTtoFLEX20.mpeg  DEDOS_AXIAL_FLEXtoEXT20.mpeg  PUNHO_AXIAL_EXT30.mpeg  PUNHO_AXIAL_FLEX30.mpeg  PUNHO_LONG_EXT30.mpeg  PUNHO_LONG_FLEX30.mpeg
Thesis/vid/GEMS_DB/: ArcAudit.dbs  ArcData.dbs  Master.db
Thesis/vid/GEMS_IMG/2017_APR/04/PA110032/: H4IIHB94  H4IIHB98  H4IIHB9A  H4IIHB9C  H4IIHB9E  H4IIHB9G  H4IIHB9I  H4IIHB9K  H4IIHB9M  H4IIHB9O  H4IIHB9Q  H4IIHB9U
Thesis/vid/Mpeg/: Image05.xmp
Thesis/vid/Videos bons/: MED_AXIAL_EXT20.mpeg  MED_AXIAL_EXT202.mpeg  MED_AXIAL_EXT203.mpeg  MED_AXIAL_EXT30.mpeg  MED_AXIAL_FLEX20.mpeg  MED_AXIAL_FLEX202.mpeg  MED_AXIAL_FLEXtoEXT20.mpeg  MED_LONG_EXT30.mpeg  MED_LONG_EXT_302.mpeg  MED_LONG_FLEX30.mpeg  MED_LONG_FLEX302.mpeg  MED_LONG_FLEX303.mpeg
Thesis/vid/bons/: PUNHO_AXIAL_EXT20.wmv  TERCO_MED_LONG_EXT30.wmv  TERCO_MED_LONG_FLEX302.wmv
Thesis/vid/export/MEDIDAS DE ALTURA/: Image02.wmv  Image15.wmv
Thesis/vid/export/VIDEOS MEDNERV18042017/: Image01.wmv  Image02.wmv  Image04.wmv  Image15.wmv  Image17.wmv  Image18.wmv  Image19.wmv  Image20.wmv  Image21.wmv
Thesis/vid/exportP10__17_05_2017/: PUNHO_EXT.wmv  PUNHO_EXT2.wmv  PUNHO_FLEX.wmv  PUNHO_FLEX2.wmv  TERCO_MED_AXIAL_FLEX.wmv  TERCO_MED_AXIAL_FLEX2.wmv  TERCO_MED_LONG_FLEX.wmv
Thesis/vid/exportP11/: AL_Tnm_P11_TER_MED_SAG_FLEX_1.wmv  AL_Tnm_P11_TER_MED_SAG_FLEX_2.wmv
cameraCalibration/src/: CMakeLists.txt  chessboard.cpp
