cmake_minimum_required(VERSION 2.8)
project( ProjectName )
#set(PCL_DIR "/path/to/PCLConfig.cmake")
MESSAGE ("\n==> Finding 3rd Party Packages")
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
set( BASE_DIR ${CMAKE_SOURCE_DIR} )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BASE_DIR}/bin )
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_subdirectory(src)